<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/connect_or_create_root_layout"
    android:layout_width="270dp"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_vertical"
    android:gravity="center"
    android:orientation="vertical">

    <!--<LinearLayout-->
    <!--android:id="@+id/connect_screen"-->
    <!--android:layout_width="270dp"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="#303030"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:orientation="vertical">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/facile_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:text="@string/Connect_to_facile"
            android:textSize="14sp" />

    </LinearLayout>

    <!-- Account connect -->

    <!-- Account creation -->

    <Button
        android:id="@+id/account_connect_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/Connect" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoAccountYet" />

    <Button
        android:id="@+id/account_creation_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account" />

    <!--</LinearLayout>-->
</LinearLayout>